kubernetes/kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: infinispan-operator
    control-plane: controller-manager
  name: infinispan-operator
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: infinispan-operator
  name: infinispan-operator-webhook-service
  namespace: infinispan-operator
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/name: infinispan-operator
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: infinispan-operator
    control-plane: controller-manager
  name: infinispan-operator-controller-manager
  namespace: infinispan-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: infinispan-operator
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/name: infinispan-operator
        control-plane: controller-manager
    spec:
      containers:
        - args:
            - operator
            - --leader-elect
          image: quay.io/infinispan/operator:15.2.1.Final
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      serviceAccountName: infinispan-operator-controller-manager
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: infinispan-operator/infinispan-operator-serving-cert
  labels:
    app.kubernetes.io/name: infinispan-operator
  name: infinispan-operator-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /mutate-infinispan-org-v1-infinispan
    failurePolicy: Fail
    name: minfinispan.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - infinispans
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /mutate-infinispan-org-v2alpha1-backup
    failurePolicy: Fail
    name: mbackup.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v2alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backups
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /mutate-infinispan-org-v2alpha1-cache
    failurePolicy: Fail
    name: mcache.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v2alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - caches
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /mutate-infinispan-org-v2alpha1-restore
    failurePolicy: Fail
    name: mrestore.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v2alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - restores
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: infinispan-operator/infinispan-operator-serving-cert
  labels:
    app.kubernetes.io/name: infinispan-operator
  name: infinispan-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /validate-infinispan-org-v1-infinispan
    failurePolicy: Fail
    name: vinfinispan.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - infinispans
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /validate-infinispan-org-v2alpha1-backup
    failurePolicy: Fail
    name: vbackup.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v2alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backups
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /validate-infinispan-org-v2alpha1-batch
    failurePolicy: Fail
    name: vbatch.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v2alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - batches
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /validate-infinispan-org-v2alpha1-cache
    failurePolicy: Fail
    name: vcache.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v2alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - caches
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: infinispan-operator-webhook-service
        namespace: infinispan-operator
        path: /validate-infinispan-org-v2alpha1-restore
    failurePolicy: Fail
    name: vrestore.kb.io
    rules:
      - apiGroups:
          - infinispan.org
        apiVersions:
          - v2alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - restores
    sideEffects: None
